# doc-test-project

./: .readthedocs.yaml  README.md  pyproject.toml
docs/docs/: requirements.txt
docs/source/: conf.py  installation.rst  quickstart.rst  requirements.txt
src/weather_tools/: __init__.py  calculations.py  visualization.py
tests/: test_calculations.py
